progress with the data

--- a/notebooks/count-mt-metrics.ipynb
+++ b/notebooks/count-mt-metrics.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,12 +43,23 @@
     "        return 0.0\n",
     "\n",
     "def calculate_rougeL(row):\n",
-    "    scores = rouge.get_scores(row['generated_nl'], row['gold_standard_nl'])\n",
-    "    return np.round(scores[0]['rouge-l']['f'], 4)\n",
+    "    try:\n",
+    "        scores = rouge.get_scores(row['generated_nl'], row['gold_standard_nl'])\n",
+    "        return np.round(scores[0]['rouge-l']['f'], 4)\n",
+    "    except:\n",
+    "        return 0\n",
     "\n",
     "def calculate_levenshtein(row):\n",
-    "    return np.round(levenshtein_distance(row['generated_nl'], row['gold_standard_nl']), 4)\n",
+    "    try:\n",
+    "        return np.round(levenshtein_distance(row['generated_nl'], row['gold_standard_nl']), 4)\n",
+    "    except:\n",
+    "        return len(row['gold_standard_nl'])\n",
     "\n",
+    "def tokenize(x):\n",
+    "    try:\n",
+    "        return word_tokenize(str(x))\n",
+    "    except:\n",
+    "        return str(x).split()\n",
     "# from bert_score import score\n",
     "\n",
     "# def calculate_bert_score(row):\n",
@@ -58,16 +69,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "qald_9_plus_test_wikidata.json_en.tsv\n",
+      "qald_9_plus_train_wikidata.json_en.tsv\n",
+      "qald_9_plus_test_wikidata.json_de.tsv\n",
+      "qald_9_plus_train_wikidata.json_ru.tsv\n"
+     ]
+    }
+   ],
    "source": [
-    "model = \"mistral-7b-oneshot\"\n",
+    "model = \"mistral-7b-zeroshot-finetuned\"\n",
     "\n",
     "for file in os.listdir(f\"../data/alpe-experiments/raw/{model}/\"):\n",
     "    df = pd.read_csv(f\"../data/alpe-experiments/raw/{model}/{file}\", sep='\\t')\n",
-    "\n",
-    "    df['tokenized_generated_nl'] = df['generated_nl'].apply(word_tokenize)\n",
+    "    print(file)\n",
+    "    df['tokenized_generated_nl'] = df['generated_nl'].apply(tokenize)\n",
     "    df['tokenized_gold_standard_nl'] = df['gold_standard_nl'].apply(word_tokenize)\n",
     "    df['sentence_bleu'] = df.apply(calculate_bleu, axis=1).astype(float)\n",
     "    df['sentence_nist'] = df.apply(calculate_nist, axis=1).astype(float)\n",
