progress for ISWC

--- a/notebooks/count-mt-metrics.ipynb
+++ b/notebooks/count-mt-metrics.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,31 +64,44 @@
     "\n",
     "# def calculate_bert_score(row):\n",
     "    # P, R, F1 = score(row['generated_nl'], row['gold_standard_nl'], lang=\"en\", verbose=True)\n",
-    "    # return F1.mean()"
+    "    # return F1.mean()\n",
+    "\n",
+    "def post_process_mistral(row):\n",
+    "    nl = str(row['generated_nl']).split(\"\\n\")[0]\n",
+    "    \n",
+    "    return nl"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "qald_9_plus_test_wikidata.json_ru.tsv\n",
       "qald_9_plus_test_wikidata.json_en.tsv\n",
       "qald_9_plus_train_wikidata.json_en.tsv\n",
       "qald_9_plus_test_wikidata.json_de.tsv\n",
-      "qald_9_plus_train_wikidata.json_ru.tsv\n"
+      "qald_10.json_en.tsv\n",
+      "qald_10.json_de.tsv\n",
+      "qald_9_plus_train_wikidata.json_ru.tsv\n",
+      "qald_9_plus_train_wikidata.json_de.tsv\n"
      ]
     }
    ],
    "source": [
-    "model = \"mistral-7b-zeroshot-finetuned\"\n",
+    "model = \"mistral-7b-oneshot\"\n",
     "\n",
     "for file in os.listdir(f\"../data/alpe-experiments/raw/{model}/\"):\n",
     "    df = pd.read_csv(f\"../data/alpe-experiments/raw/{model}/{file}\", sep='\\t')\n",
     "    print(file)\n",
+    "    \n",
+    "    if \"mistral\" in model:\n",
+    "        df['generated_nl'] = df.apply(lambda row: post_process_mistral(row), axis=1)\n",
+    "\n",
     "    df['tokenized_generated_nl'] = df['generated_nl'].apply(tokenize)\n",
     "    df['tokenized_gold_standard_nl'] = df['gold_standard_nl'].apply(word_tokenize)\n",
     "    df['sentence_bleu'] = df.apply(calculate_bleu, axis=1).astype(float)\n",
@@ -98,13 +111,6 @@
     "\n",
     "    df.to_csv(f\"../data/alpe-experiments/metrics/{model}/{file}\", sep='\\t', index=False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
